--- a/src/css/templatemo-festava-live.css
+++ b/src/css/templatemo-festava-live.css
@@ -11,13 +11,13 @@ https://templatemo.com/tm-583-festava-live
 -----------------------------------------*/
 :root {
   --white-color: #ffffff;
-  --primary-color: #f8cb2e;
-  --secondary-color: #ee5007;
-  --section-bg-color: #373b3d;
-  --custom-btn-bg-color: #ee5007;
-  --custom-btn-bg-hover-color: #c01f27;
-  --dark-color: #000000;
-  --p-color: #717275;
+  --primary-color: #c01f27;
+  --secondary-color: #aa3030;
+  --section-bg-color: #1c2b3b;
+  --custom-btn-bg-color: #c01f27;
+  --custom-btn-bg-hover-color: #444c5c;
+  --dark-color: #1c2b3b;
+  --p-color: #444c5c;
   --border-color: #7fffd4;
   --link-hover-color: #b22727;
 
@@ -93,7 +93,7 @@ h6 {
 }
 
 p {
-  color: var(--p-color);
+  color: var(--white-color);
   font-size: var(--p-font-size);
   font-weight: var(--font-weight-light);
 }
@@ -471,6 +471,7 @@ strong {
   overflow: hidden;
   padding-top: 100px;
   height: calc(100vh - 51px);
+  background-color: #000000;
 }
 
 .hero-section small {
@@ -498,8 +499,8 @@ strong {
   ABOUT              
 -----------------------------------------*/
 .about-section {
-  background-image: url("../uploads/fugg8-blur.png");
-  background-color: #704010;
+  background-image: url("../uploads/fuel-blur.png");
+  background-color: #000000;
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
@@ -511,7 +512,6 @@ strong {
 }
 
 .about-text-wrap {
-  position: relative;
 }
 
 .about-text-icon {
@@ -595,7 +595,7 @@ strong {
 
 .artists-hover {
   background-color: var(--primary-color);
-  background-color: rgba(248, 203, 46, 0.75);
+  background-color: rgba(21, 35, 52, 0.75);
   border-radius: var(--border-radius-medium);
   backdrop-filter: blur(5px) saturate(180%);
   -webkit-backdrop-filter: blur(5px) saturate(180%);
@@ -618,7 +618,7 @@ strong {
 }
 
 .artists-hover p a {
-  color: var(--secondary-color);
+  color: var(--primary-color);
 }
 
 .artists-hover p a:hover {
@@ -633,7 +633,7 @@ strong {
   SCHEDULE              
 -----------------------------------------*/
 .schedule-section {
-  background-image: url("../uploads/fuad1-blur.png");
+  background-image: url("../uploads/heroic-blur.jpg");
   background-color: #242424;
   background-repeat: no-repeat;
   background-position: center;
@@ -933,7 +933,11 @@ strong {
   }
 
   .navbar {
-    background-color: var(--dark-color);
+    background-color: var(--dark-color) !important;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
   }
 
   .navbar-expand-lg .navbar-nav {
@@ -1001,4 +1005,27 @@ strong {
   h5 {
     font-size: 20px;
   }
+}
+
+/*---------------------------------------
+  SPONSORED SECTION               
+-----------------------------------------*/
+.sponsored-section {
+  height: auto; /* Adjust as needed */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(55, 59, 61);
+  padding: 20px;
+}
+
+.sponsored-section img {
+  max-width: 100%;
+  height: auto;
+}
+
+.sponsored-section h4 {
+  color: var(--white-color);
+  margin-bottom: 20px;
 }
